--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,9 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '6.10.4'
     testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '6.10.4'
 
-
-
-
-
-
-
-
 }
 
-task api(){
-
+task all(type: Test) {
 }
 
 test {
